--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@ carousel:
   transition_duration: 1s
 
   images:
-    - /assets/images/index/01.jpg
-    - /assets/images/index/02.gif
-    - /assets/images/index/03.jpg
-    - /assets/images/index/04.gif
-    - /assets/images/index/05.jpg
-    - /assets/images/index/06.jpg
-    - /assets/images/index/07.gif
-    - /assets/images/index/08.jpg
-    - /assets/images/index/09.jpg
-    - /assets/images/index/10.jpg
+    - /assets/images/banca-popolare-di-cividale-del-friuli/01.jpg
+    - /assets/images/banca-popolare-di-cividale-del-friuli/02.jpg
+    - /assets/images/guggenheim-helsinki-museum/01.jpg
+    - /assets/images/guggenheim-helsinki-museum/02.jpg
+    - /assets/images/extra/01.jpg
+    - /assets/images/extra/02.jpg
+    - /assets/images/new-national-gallery-and-ludwig-museum/01.jpg
+    - /assets/images/extra/03.jpg
+    - /assets/images/extra/04.jpg
+    - /assets/images/extra/05.jpg
 ---
 
 {% capture scss %}
@@ -52,15 +52,11 @@ carousel:
 
     <div class="carousel">
       {% for image in page.carousel.images %}
-        <a href="#{{ forloop.index }}" tabindex="-1" class="carousel-item flex">
-          <img src="{{ image | relative_url }}" class="cover" />
-        </a>
+        <img src="{{ image | relative_url }}" class="carousel-item" />
       {% endfor %}
 
       {% for image in page.carousel.images limit: 1 %}
-        <a href="#{{ forloop.index }}" tabindex="-1" class="carousel-item flex" aria-hidden="true">
-          <img src="{{ image | relative_url }}" class="cover" />
-        </a>
+        <img src="{{ image | relative_url }}" class="carousel-item" />
       {% endfor %}
     </div>
   </main>
