Create a layout for projects

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 carousel:
-  image_duration: 5s
-  transition_duration: 1s
+  image_duration: '5s'
+  transition_duration: '1s'
 
   images:
-    - /assets/images/banca-popolare-di-cividale-del-friuli/01.jpg
-    - /assets/images/banca-popolare-di-cividale-del-friuli/02.jpg
-    - /assets/images/guggenheim-helsinki-museum/01.jpg
-    - /assets/images/guggenheim-helsinki-museum/02.jpg
-    - /assets/images/extra/01.jpg
-    - /assets/images/extra/02.jpg
-    - /assets/images/new-national-gallery-and-ludwig-museum/01.jpg
-    - /assets/images/extra/03.jpg
-    - /assets/images/extra/04.jpg
-    - /assets/images/extra/05.jpg
+    - '/assets/images/banca-popolare-di-cividale-del-friuli/01.jpg'
+    - '/assets/images/banca-popolare-di-cividale-del-friuli/02.jpg'
+    - '/assets/images/guggenheim-helsinki-museum/01.jpg'
+    - '/assets/images/guggenheim-helsinki-museum/02.jpg'
+    - '/assets/images/extra/01.jpg'
+    - '/assets/images/extra/02.jpg'
+    - '/assets/images/new-national-gallery-and-ludwig-museum/01.jpg'
+    - '/assets/images/extra/03.jpg'
+    - '/assets/images/extra/04.jpg'
+    - '/assets/images/extra/05.jpg'
 ---
 
 {% capture scss %}
